[package]
name = "cvm"
version = "0.5.0"
edition = "2021"
authors = ["abut0n"]
description = "Rust implementation of Distinct Elements in Streams"
repository = "https://github.com/marcuccio/cvm"
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
rand = "0.8.5"
